# nwbinspector

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Legal.txt  MANIFEST.in  README.md  base_test_config.json  command_line_usage.md  license.txt  logo.pptx  nwbinspect.py  nwbinspector.py  pynwb_inspect_dir.py  pyproject.toml  requirements-rtd.txt  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.md  documentation.yml  feature_request.yml  new_check.yml
.github/PULL_REQUEST_TEMPLATE/: add_check_function.md  new_feature.yml
.github/workflows/: assess-file-changes.yml  auto-publish.yml  black.yml  codespell.yml  dailies.yml  dandi-dev-live-service.yml  dandi-dev-live-services.yml  dandi-dev.yml  dandi-gallery.yml  dandi-release.yml  dandi_dev.yml  dandi_dev_live_service.yml  dandi_release.yml  deploy-tests.yml  dev-gallery.yml  dev_gallery.yml  doc-link-checks.yml  flake8.yml  read-nwbfile-tests.yml  streaming-tests.yml  test_external_links.yml  testing-linux.yml  testing.yml  update-testing-files.yml  version-gallery.yml  version_gallery.yml
docs/: .readthedocs.yaml  Makefile  advanced_usage.md  best_practices.rst  best_practices_index.rst  command_line_usage.md  conf.py  conf_extlinks.py  core_nwbinspector.md  developer_guide  developer_guide.rst  gen_checks_by_importance.py  index.rst  installation.rst  usage_as_a_library.md  user_guide.rst  using_as_a_library.md
docs/_static/css/: custom.css
docs/api/: checks.all.rst  checks.rst  checks.time_series.rst  nwbinspector.rst  register_check.rst  tools.rst  utils.rst
docs/best_practices/: behavior.rst  best_practices_index.rst  ecephys.rst  extensions.rst  general.rst  image_series.rst  naming.rst  nwbfile_metadata.rst  ogen.rst  optical_physiology.rst  other.rst  simulated_data.rst  tables.rst  time_series.rst  todo.rst  units.rst
docs/source/: developer_guide.rst
docs/user_guide/: advanced_usage.md  advanced_usage.rst  command_line_usage.rst  installation.rst  library_usage.rst  usage_as_a_library.md  user_guide.rst  user_guide_index.rst  using_the_command_line_interface.rst  using_the_library.rst  using_the_library_advanced.rst
logo/: logo.pptx
nwbinspector/: __init__.py  check_datasets.py  check_time_series.py  config.schema.json  dandi.inspector_config.yaml  inspect_nwb.py  inspector_tools.py  load_checks.py  nwbinspector.py  refactor_inspector.py  register_checks.py  testing.py  tools.py  utils.py  version.py
nwbinspector/checks/: behavior.py  check_nwb_containers.py  check_nwbfile_metadata.py  check_tables.py  check_time_series.py  ecephys.py  general.py  icephys.py  image_series.py  images.py  nwb_containers.py  nwbfile_metadata.py  ogen.py  ophys.py  tables.py  time_series.py
nwbinspector/internal_configs/: dandi.inspector_config.yaml
src/nwbinspector/: __init__.py  _configuration.py  _dandi_inspection.py  _dandi_inspection_cli.py  _formatting.py  _inspect_all.py  _inspect_dandiset_cli.py  _inspection.py  _inspection_cli.py  _nwb_inspection.py  _nwb_inspection_cli.py  _nwbinspector_cli.py  _organization.py  _registration.py  _types.py  inspector_tools.py  nwbinspector.py  register_checks.py  repack_hdf5.py  testing.py  tools.py  utils.py
src/nwbinspector/_internal_configs/: config.schema.json  dandi.inspector_config.yaml
src/nwbinspector/checks/: __init__.py  _behavior.py  _ecephys.py  _general.py  _icephys.py  _image_series.py  _images.py  _nwb_containers.py  _nwbfile_metadata.py  _ogen.py  _ophys.py  _tables.py  _time_series.py  behavior.py  ecephys.py  general.py  icephys.py  image_series.py  images.py  nwb_containers.py  nwbfile_metadata.py  ogen.py  ophys.py  tables.py  time_series.py
src/nwbinspector/checks/behavior/: __init__.py  _behavior.py
src/nwbinspector/checks/ecephys/: __init__.py  _ecephys.py
src/nwbinspector/checks/general/: __init__.py  _general.py
src/nwbinspector/checks/icephys/: __init__.py  _icephys.py
src/nwbinspector/checks/image_series/: __init__.py  _image_series.py
src/nwbinspector/checks/images/: __init__.py  _images.py
src/nwbinspector/checks/nwb_containers/: __init__.py  _nwb_containers.py
src/nwbinspector/checks/nwbfile_metadata/: __init__.py  _nwbfile_metadata.py
src/nwbinspector/checks/ogen/: __init__.py  ogen.py
src/nwbinspector/inspector_tools/: __init__.py
src/nwbinspector/internal_configs/: dandi.inspector_config.yaml
src/nwbinspector/nwbinspector/: __init__.py
src/nwbinspector/register_checks/: __init__.py
src/nwbinspector/testing/: __init__.py  _testing.py
src/nwbinspector/tools/: __init__.py  _dandi.py  _nwb.py  _read_nwbfile.py  dandi.py  nwb.py  testing.py
src/nwbinspector/utils/: __init__.py  _utils.py
src/nwbinspector/version/: __init__.py
tests/: 000126_report.txt  nwbinspector_log_file.txt  read_nwbfile_streaming_tests.py  read_nwbfile_tests.py  streaming_cli_tests.py  streaming_tests.py  test_check_configuration.py  test_datasets.py  test_inspector.py  test_read_nwbfile.py  test_register_check.py  test_testing_module.py  test_time_series.py  test_tools.py  test_utils.py  true_nwbinspector_default_report.txt  true_nwbinspector_default_report_zarr.txt  true_nwbinspector_log_file.txt  true_nwbinspector_log_file_testing.txt  true_nwbinspector_report.txt  true_nwbinspector_report_with_dandi_config.txt  true_nwbinspector_report_with_dandi_config_zarr.txt  unit_tests.py  utils.py
tests/expected_reports/: true_nwbinspector_default_report_hdf5.txt  true_nwbinspector_default_report_zarr.txt  true_nwbinspector_report_with_dandi_config_zarr.txt
tests/integration_tests/: test_nwb_containers_integration.py  test_time_series_integration.py
tests/unit_tests/: test_behavior.py  test_containers.py  test_ecephys.py  test_general.py  test_icephys.py  test_image_series.py  test_images.py  test_nwb_containers.py  test_nwbfile_metadata.py  test_ogen.py  test_ophys.py  test_register_check.py  test_tables.py  test_time_series.py  test_time_series_unit.py
(+8 files in other folders)
